@@ -1,3 +1,7 @@
+2012-1-4:
+  * Added norm(), rcond(), and kappa() methods.
+  * Added new diag() method for constructing diagonal ddmatrices.
+
 2012-12-17:
   * Add copyright to vignette.
 
